# linkerProblem

./: LinkerProblem.cabal
app/: Main.hs
cbits/: helloWorld.c
src/: HelloWorld.hs
