name:                 LinkerProblem
version:              0.1.0.0
synopsis:
homepage:
author:               simon.bourne
category:
build-type:           Simple
cabal-version:        >=1.10

library
  exposed-modules:      HelloWorld
  build-depends:        base >= 4.7 && < 5
  hs-source-dirs:       src
  default-language:     Haskell2010

executable LinkerProblem
  main-is:              Main.hs
  extra-lib-dirs:       lib
  extra-libraries:      helloWorld
  build-depends:        base >= 4.7 && < 5,
                        LinkerProblem
  hs-source-dirs:       app
  default-language:     Haskell2010
